--- a/MyASPProject/Views/Restaurants/Details.cshtml
+++ b/MyASPProject/Views/Restaurants/Details.cshtml
@@ -1,26 +1,16 @@
 ﻿@model MyASPProject.Models.Restaurant
 @{
-    Layout = null;
+    ViewData["Title"] = "Detail Restaurant";
 }
 
-<html>
-<head>
-    <title>Detail Restaurant</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Detail Restaurant</h2>
-                <p>Restaurant ID: @Model.Id - @Model.Name</p>
-            </div>
-        </div>
+<h1 class="mt-4">List Of Restaurant</h1>
+<ol class="breadcrumb mb-4">
+    <li class="breadcrumb-item"><a asp-controller="Restaurants" asp-action="Index">List of Restaurant</a></li>
+    <li class="breadcrumb-item active">Detail Restaurant</li>
+</ol>
+
+<div class="card mb-4">
+    <div class="card-body">
+        <span>@Model.Id - @Model.Name</span>
     </div>
-</body>
-</html>
+</div>
