--- a/MyASPProject/Views/_ViewImports.cshtml
+++ b/MyASPProject/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MyASPProject
 @using MyASPProject.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, MyASPProject
