menambahkan insert cuisine

--- a/MyASPProject/Views/Restaurants/Index.cshtml
+++ b/MyASPProject/Views/Restaurants/Index.cshtml
@@ -10,6 +10,9 @@
 </ol>
 <div class="card mb-4">
     <div class="card-body">
+        <div class="col-md-12">
+            <a asp-action="Create">Add New Restaurant</a>
+        </div>
         <div class="col-md-6">
             @if (ViewData["pesan"] != null)
             {
