--- a/MyASPProject/Views/Restaurants/Create.cshtml
+++ b/MyASPProject/Views/Restaurants/Create.cshtml
@@ -13,18 +13,23 @@
     <div class="card-body">
         <div class="col-md-6">
             <form asp-action="Create">
-                <div class="form-group">
-                    <label asp-for="Name" class="control-label">Name :</label>
-                    <input asp-for="Name" class="form-control" />
+                <div class="mb-3 mt-3">
+                    <label asp-for="Name" class="form-label">Restaurant Name :</label>
+                    <input asp-for="Name" class="form-control" placeholder="enter restaurant name" />
+                    <span asp-validation-for="Name" class="text-danger" />
                 </div>
-                <div class="form-group">
-                    <label asp-for="Cuisine" class="control-label">Cuisine Type :</label>
-                    <select asp-for="Cuisine" asp-items="@Html.GetEnumSelectList<CuisineType>()" class="form-control"></select>
+                <div class="mb-3">
+                    <label asp-for="Cuisine" class="form-label">Cuisine Type :</label>
+                    <select asp-for="Cuisine" asp-items="@Html.GetEnumSelectList<CuisineType>()" class="form-control">
+                    </select>
+                    <span asp-validation-for="Cuisine" class="text-danger" />
                 </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-info" />
-                </div>
+                <input type="submit" value="Create" class="btn btn-primary" />
             </form>
         </div>
     </div>
 </div>
+
+@section Scripts{
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
