menambahkan partial view dan view component

--- a/MyASPProject/Views/Home/Index.cshtml
+++ b/MyASPProject/Views/Home/Index.cshtml
@@ -9,7 +9,9 @@
 <div class="card mb-4">
     <div class="card-body">
         <p class="mb-0">
-           Selamat datang di daftar restaurant terlengkap di indonesia
+           Selamat datang di daftar restaurant terlengkap di indonesia <br/>
+           <h2>View Component</h2>
+           @await Component.InvokeAsync("Hello")
         </p>
     </div>
 </div>
