--- a/MyASPProject/Views/Home/Index.cshtml
+++ b/MyASPProject/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     <div class="card-body">
         <p class="mb-0">
            Selamat datang di daftar restaurant terlengkap di indonesia <br/>
+           Username: @User.Identity.Name
            <h2>View Component</h2>
            @await Component.InvokeAsync("Hello")
         </p>
