--- a/MyASPProject/Views/Shared/_LayoutStartBootstrap.cshtml
+++ b/MyASPProject/Views/Shared/_LayoutStartBootstrap.cshtml
@@ -47,6 +47,10 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Register
                             </a>
+                             <a class="nav-link" asp-controller="Account" asp-action="Logout">
+                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                                Logout
+                            </a>
                             <div class="sb-sidenav-menu-heading">Interface</div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
