mendaftarkan user ke role tertentu

--- a/MyASPProject/Views/Admin/EditRole.cshtml
+++ b/MyASPProject/Views/Admin/EditRole.cshtml
@@ -31,7 +31,7 @@
             </form>
             <br />
             <a class="btn btn-primary mb-3" style="width:auto">Add User to Role</a>
-           @* @if (Model.Users.Any())
+            @if (Model.Users.Any())
             {
                 <table class="table ttable-striped">
                     <tr>
@@ -46,7 +46,7 @@
                         </tr>
                     }
                 </table>
-            }*@
+            }
         </div>
     </div>
 </div>
