menambahkan role based menu

--- a/MyASPProject/Views/Shared/_LayoutStartBootstrap.cshtml
+++ b/MyASPProject/Views/Shared/_LayoutStartBootstrap.cshtml
@@ -32,22 +32,27 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                    data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
-                @if (signInManager.IsSignedIn(User))
-                {
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">Settings</a></li>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                    @if (signInManager.IsSignedIn(User) && User.IsInRole("admin"))
+                    {
+                        <li><a class="dropdown-item" asp-controller="Admin" asp-action="CreateRole">Create Role</a></li>
+                        <li><a class="dropdown-item" asp-controller="Admin" asp-action="ListRoles">List Role</a></li>
+                        <li><a class="dropdown-item" asp-controller="Admin" asp-action="AddUserToRole">User To Role</a></li>
+                    }
+
+                    @if (signInManager.IsSignedIn(User))
+                    {
                         <li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" href="#!">Settings</a></li>
                         <li><a class="dropdown-item" asp-controller="Account" asp-action="Logout">Logout</a></li>
-                    </ul>
-                }
-                else
-                {
-                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                    }
+                    else
+                    {
                         <li><a class="dropdown-item" asp-controller="Account" asp-action="Register">Register</a></li>
                         <li><hr class="dropdown-divider" /></li>
                         <li><a class="dropdown-item" asp-controller="Account" asp-action="Login">Login</a></li>
-                    </ul>
-                }
+                    }
+                </ul>
             </li>
         </ul>
     </nav>
@@ -65,7 +70,7 @@
                             </a>
                         }
 
-                        @if(User.IsInRole("admin"))
+                        @if (User.IsInRole("admin"))
                         {
                             <a class="nav-link" asp-controller="Restaurants" asp-action="Create">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
