--- a/MyASPProject/Views/Samurai/Index.cshtml
+++ b/MyASPProject/Views/Samurai/Index.cshtml
@@ -22,6 +22,13 @@
             <p>
                 <a asp-action="Create">Create New</a>
             </p>
+            <p>
+                <form asp-action="Index" method="get">
+                    Masukan Nama:
+                    <input name="name" type="text" placeholder="masukan nama" />
+                    <input type="submit" value="Submit"  class="btn btn-primary" />
+                </form>
+            </p>
             <table class="table table-striped">
                 <thead>
                     <tr>
